ajout des librairies decomp et pathseg, modification du html pour appeler les librairies

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <title>Matter.js Demo</title>
 
     <!-- Libs -->
-    <script type="text/javascript" src="./lib/decomp.js"></script>
-    <script type="text/javascript" src="./lib/pathseg.js"></script>
+    <script type="text/javascript" src="decomp.js"></script>
+    <script type="text/javascript" src="pathseg.js"></script>
 
     <!-- Matter -->
     <script src="../build/matter.js"></script>
@@ -35,7 +35,7 @@
     <script src="./lib/matter-wrap.js"></script>
 
     <!-- Examples -->
-    <script src="../examples/svg.js"></script>
+    <script src="svg.js"></script>
 
     <style type="text/css">
       * {
