--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="pathseg.js"></script>
 
     <!-- Matter -->
-    <script src="../build/matter.js"></script>
+    <script src="matter.js"></script>
 
     <!-- MatterTools -->
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
